feat: main page design

--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,4 @@
-.App-header {
+.App {
   background-color: #EDE8D0;
-  min-height: 10vh;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  font-size: 20px;
-  color: #355E3B;
-  padding-top: 10px;
-  padding-left: 10px;
   font-family: 'Frank Ruhl Libre', sans-serif;
 }
-
-
-
-/*
-background-color: #EDE8D0;
-*/
