--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,5 +1,13 @@
-body {
-    background-color: #EDE8D0;
-    font-family: 'Frank Ruhl Libre', sans-serif;
+@keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+.main-letter {
+    animation: fadeIn 2s ease-in-out;
 }
 
